# SmartShed-Hi3861

applications/sample/: BUILD.gn
applications/sample/wifi-iot/app/: BUILD.gn
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/: README.md
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/actuator/fan/: BUILD.gn  fan_task.c  fan_task.h  main.c  mqtt_task.c  oled_task.c  sub_task.c
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/actuator/full_spectrum_led/: BUILD.gn  led_task.c  led_task.h  main.c  mqtt_task.c  oled_task.c  oled_task.h
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/actuator/water_pump/: BUILD.gn  main.c  mqtt_task.c  oled_task.c  sub_task.c  sub_task.h  water_pump_task.c  wifi_utils.c
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/boards/env_rgb_board/: BUILD.gn
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/boards/soil_actuator_board/: BUILD.gn
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/combined/: BUILD.gn  main.c  smart_shed_mqtt.c  smart_shed_mqtt.h  smart_shed_oled.c  smart_shed_oled.h  smart_shed_wifi.h
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/common/display/: oled_ssd1306.c  oled_ssd1306.h
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/common/runtime/: main.c  smart_shed_mqtt.c  smart_shed_oled.c  smart_shed_shared.c  smart_shed_shared.h  smart_shed_wifi.c
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/data_collector/light_intensity/: BUILD.gn  light_intensity_task.c  light_intensity_task.h  main.c  mqtt_task.c  oled_task.c  publish_task.c
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/data_collector/soil_moisture/: BUILD.gn  main.c  mqtt_task.c  oled_task.c  soil_moisture_task.c  wifi_utils.c  wifi_utils.h
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/data_collector/temp_and_hum/: BUILD.gn  main.c  mqtt_task.c  mqtt_task.h  oled_ssd1306.c  oled_task.c  temp_and_hum_task.c  wifi_utils.c
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/modules/actuators/fan/: fan_task.c
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/modules/actuators/led/: led_task.c
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/modules/actuators/water_pump/: water_pump_task.c  water_pump_task.h
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/modules/sensors/light_intensity/: light_intensity_task.h
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/modules/sensors/soil_moisture/: soil_moisture_task.h
applications/sample/wifi-iot/app/workspaces/smart_shed_2.0/modules/sensors/temp_and_hum/: temp_and_hum_task.c  temp_and_hum_task.h
